= News file for loccount =

Repository head:
     Support for CSS and JavaScript added 

1.0: 2016-11-21::
     Initial release.