@@ -1,0 +1,6 @@
+// Should count 4 lines
+package newline
+
+func foo() string {
+    return `" `
+}
