@@ -1,7 +1,8 @@
 = News file for loccount =
 
 Repository head:
-     Support for CSS and JavaScript added 
+     Support for CSS and JavaScript added.
+     Correct counting of raw string literals in Go.
 
 1.0: 2016-11-21::
      Initial release.
